--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
 		<!--[if lte IE 9]><link rel="stylesheet" href="css/ie9.css" /><![endif]-->
 		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie8.css" /><![endif]-->
 	</head>
-	<body>
+	</body>
 	  </html>
 	  
