automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -3,10 +3,7 @@
 <html>
 	<head>
 		<title>The Riveter</title>
-		<link rel="stylesheet" href="css/main.css" /> 
-		<!--[if lte IE 9]><link rel="stylesheet" href="css/ie9.css" /><![endif]-->
-		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie8.css" /><![endif]-->
-	</head>
-	</body>
+		<head> Beautiful building!</head>
+		<body></body>
 	  </html>
 	  
