automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <html>
 	<head>
 		<title>The Riveter</title>
-		<body></body>
+		</head>
+		<body> A beautiful building!</body>
 		
 	  </html>
 	  
